--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
     <div> 
         <table>
             <tr>
-            <th> Resent Score</th>
-            <th><button> Refrash</button></th>
+            <th> Recent Score</th>
+            <th><button> Refresh</button></th>
             </tr>
             <tr>
             <td>Peter</td>
